# himena

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tutorial.html
.crossnote/: config.js  parser.js
.github/workflows/: docs.yml  test.yml
_scripts/: _hooks.py  _screenshots.py
api/: consts.html  layout.html  plugins.html  profile.html  types.html  widgets.html
api/consts/: index.html
api/layout/: index.html
api/plugins/: index.html
api/profile/: index.html
api/standards/: model_meta.html  plotting.html  roi.html
api/standards/model_meta/: index.html
api/standards/plotting/: index.html
api/standards/roi/: index.html
api/types/: index.html
api/widgets/: index.html
dev/: drag_and_drop.html  index.html  io_provider.html  plotting.html  plugin_system.html  register_dock_widgets.html  register_functions.html  register_widgets.html  widget_data_model.html
dev/drag_and_drop/: index.html
dev/io_provider/: index.html
dev/plotting/: index.html
dev/plugin_system/: index.html
dev/register_dock_widgets/: index.html
dev/register_functions/: index.html
dev/register_widgets/: index.html
dev/widget_data_model/: index.html
docs/: index.md  quick_start.md  tutorial.md
docs/_scripts/: _screenshots.py
docs/api/: consts.md  layout.md  plugins.md  profile.md  types.md  widgets.md
docs/api/standards/: model_meta.md  plotting.md  roi.md
docs/dev/: drag_and_drop.md  index.md  io_provider.md  model_types.md  plotting.md  plugin_system.md  register_dock_widgets.md  register_functions.md  register_widgets.md  widget_data_model.md
docs/usage/: basics.md  builtin_dock_widgets.md  builtin_widgets.md  customization.md  getting_started.md  index.md  sessions.md  tab_and_window.md  tabs_and_subwindows.md  workflows.md
examples/: curve_fit.py  image_acquisition_demo.py  image_parametric.py  image_processing.py  interactive_plot.py  multiple_types.py  ode_lorenz.py  plotting_0_simple_plot.py  plotting_1_plot_stack.py  plugin_dock_widget.py  serial_monitor.py  table_io.py  tables.py  tables_simple.py  tiff_io.py  use_layout.py  use_pygfx.py
examples/use_external_packages/: napari_viewers.py  ndv_viewers.py  pygfx_image_viewer.py  sklearn_with_model_drop.py  use_fastplotlib_as_plugin.py  use_magicgui_as_plugin.py  vedo_canvas.py
search/: search_index.json
src/himena/: __init__.py  __main__.py  _descriptors.py  _drag.py  _open_recent.py  _socket.py  _utils.py  anchor.py  app.py  consts.py  core.py  exceptions.py  io.py  io_utils.py  layout.py  model_meta.py  profile.py  style.py  types.py
src/himena/_app_model/: __init__.py  _application.py  _command_registry.py  _context.py  _formatter.py  utils.py
src/himena/_cli/: __init__.py  install.py  namespace.py  profiles.py
src/himena/_data_wrappers/: __init__.py  _array.py  _dataframe.py
src/himena/_providers/: __init__.py  _tuples.py  core.py
src/himena/builtins/: _io.py  io.py  new.py  run.py  table.py  text.py
src/himena/data_wrappers/: __init__.py  _array.py  _dataframe.py
src/himena/io/: __init__.py  _tuples.py  core.py
src/himena/mock/: __init__.py  main_window.py  widget.py
src/himena/plotting/: __init__.py  _api.py  layout.py  models.py
src/himena/plugins/: __init__.py  _checker.py  _signature.py  _utils.py  actions.py  config.py  core.py  install.py  io.py  widget_class.py  widget_plugins.py
src/himena/qt/: __init__.py  _qclickable_label.py  _qcoloredit.py  _qcombobutton.py  _qcommand_palette.py  _qcontrolstack.py  _qdock_widget.py  _qdtypeedit.py  _qfinderwidget.py  _qflowchart.py  _qgoto.py  _qlineedit.py  _qmain_window.py  _qmodeldrop.py  _qnotification.py  _qparametric.py  _qpopup_view.py  _qprogress.py  _qrename.py  _qresult_stack.py  _qstatusbar.py  _qsub_window.py  _qsvg.py  _qtab_widget.py  _qtitlebar.py  _qtoolbutton.py  _qtooltip_widget.py  _qtraceback.py  _qtwatchfiles.py  _qviewbox.py  _qwindow_resize.py  _utils.py  main_window.py  style.qss
src/himena/resources/: tips.json
src/himena/session/: __init__.py  _api.py  _session.py  _utils.py
src/himena/standards/: __init__.py  _base.py  ipynb.py  model_meta.py  mouse.py
src/himena/style/: __init__.py  core.py  defaults.json
src/himena/testing/: __init__.py  _pytest.py  dialog.py  image.py  notification.py  subwindow.py  table.py
src/himena/utils/: app.py  cli.py  collections.py  entries.py  html.py  image_utils.py  install_plugin.py  misc.py  ndobject.py  plot_functions.py  proxy.py  resize.py  table_selection.py  (+1 more)
src/himena_builtins/: __init__.py  _consts.py  _io.py  _pytest_fixtures.py  io.py  new.py  user_modifications.py
src/royalapp/: __init__.py  __main__.py  _descriptors.py  _enum.py  _open_recent.py  _utils.py  anchor.py  app.py  consts.py  core.py  io.py  profile.py  style.py  types.py
tests/: conftest.py  test_builtin_widgets.py  test_cli.py  test_file_and_data_types.py  test_layout.py  test_main_window.py  test_modifications.py  test_parametric_widget.py  test_plotting.py  test_qt_widgets.py  test_session.py  test_socket.py  test_standards.py  test_sub_windows.py  test_using_testing.py  test_utils.py  test_workflow.py
tests/samples/: array.npz  array_structured.npy  email.eml  eps.eps  excel.xlsx  html.html  ipynb.ipynb  json.json  local_plugin.py  markdown.md  pq.parquet  table.csv  table_nonuniform.csv  test.workflow.json
tutorial/: index.html
usage/: basics.html  builtin_dock_widgets.html  builtin_widgets.html  customization.html  index.html  sessions.html  tab_and_window.html  workflows.html
usage/basics/: index.html
usage/builtin_dock_widgets/: index.html
usage/builtin_widgets/: index.html
usage/customization/: index.html
usage/sessions/: index.html
usage/tab_and_window/: index.html
usage/workflows/: index.html
(+346 files in other folders)
